# respflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/RESPFlow/: __init__.py  access_files.py
src/RespFlow/: __init__.py  access_files.py  extract_features.py  plot_signals.py  preprocess_signals.py
src/RespFlow/data/01/: sample_data_01.csv  sample_data_02.csv
src/RespFlow/data/02/: sample_data_04.csv
src/RespFlow/data/23/: 23-06-02.csv
tests/: test_access_files.py  test_data.py
