[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "RespFlow"
authors = [{name = "David Garcia", email = "garciadavid2003@gmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/garciadavid2000/RespFlow-Python-Package"
