[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "RespFlow"
authors = [{name = "David Garcia", email = "garciadavid2003@gmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "scipy>=1.14.0",
    "plotly",
    "dash",
    "dash-ag-grid",
]

[project.urls]
Home = "https://github.com/affectivedatascience/respflow"
